# microplugins

./: CMakeLists.txt  Doxyfile.in  README.md
cmake/: macros.cmake
examples/: bad_plugin1.cxx  microservice.cxx  plugin1.cxx
include/microplugins/: iinfo.hpp  iplugin.hpp  iplugins.hpp  plugins.hpp  shared_library.hpp  singleton.hpp  storage.hpp  task.hpp  tasks.hpp  time.hpp
